--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: java
 sudo: required
 before_install:
-      "sudo apt-get update
-      sudo apt-get -y --fix-missing install npm
-      sudo npm install -g n
-      sudo n stable"
-script: ant main
+      sudo apt-get update
+      
