--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ sudo: required
 before_install:
       sudo apt-get update
       sudo apt-get -y --fix-missing install npm
+      sudo apt-get install npm
       sudo npm install -g n
       sudo n stable
