--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
 sudo: required
 before_install:
-      sudo apt-get update
-      sudo apt-get -y --fix-missing install npm
-      sudo apt-get install npm
-      sudo npm install -g n
-      sudo n stable
+      - sudo apt-get update
+      - sudo apt-get -y --fix-missing install npm
+      - sudo apt-get install npm
+      - sudo npm install -g n
+      - sudo n stable
