--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,10 @@ sudo: required
 before_install:
       - sudo apt-get update
       - sudo apt-get -y --fix-missing install npm
+      - sudo npm config set strict-ssl false
       - sudo npm install -g n
       - sudo n stable
+install:      
+      - sudo npm uninstall -g yarn
+      - sudo npm install -g yarn
+script: ant main
